[project]
    dependencies    = ["loguru>=0.7.2", "pydantic>=2.9.2", "python-dotenv>=1.0.1", "requests>=2.32.3"]
    description     = "SDK for the SpectrumX Data System"
    name            = "spectrumx"
    readme          = "README.md"
    requires-python = ">=3.12"
    version         = "0.1.0"

[build-system]
    build-backend = "hatchling.build"
    requires      = ["hatchling"]

[tool.uv]
    dev-dependencies = ["pytest-responses>=0.5.1", "rich>=13.9.2"]
